--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -112,6 +112,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>account-service</finalName>
     </build>
 
 </project>
