--- a/account-service/Dockerfile
+++ b/account-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-oracle
 VOLUME /tmp
-COPY target/account-service.jar  account-service
+COPY target/*.jar  app.jar
 ENTRYPOINT ["java","-jar", "app.jar"]
 
